Fix centreing issues on smaller devices
Addressed centering issues on smaller devices, although isses still
remain with slightly larger tablets.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,7 +33,7 @@ html, body {
 }
 
 .login-logo {
-	position: relative;;
-	left: 45%;
+	position: relative;
 	border: 1px solid #00eaff;
+	text-align: center;
 }
